# plazma-tool

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.sh  before_install.sh  before_script.sh  bintray.descriptor.json
data/: shader.frag
gui/: craco.config.js  package.json
gui-old/: .yarnrc  package.json
gui/public/: index.html
gui/public/fonts/iosevka/: .uuid
gui/src/: App.css  App.js  App.jsx  App.scss  DmoContext.jsx  DmoData.jsx  DmoFramebuffers.jsx  DmoImages.jsx  DmoModels.jsx  DmoPolygonScenes.jsx  DmoProperties.jsx  DmoQuadScenes.jsx  DmoSettings.jsx  DmoShaders.jsx  DmoSyncTracks.jsx  DmoTimeScrub.jsx  DmoTimeline.jsx  Helpers.js  Helpers.jsx  Library.jsx  MessageArea.jsx  PlazmaColorPicker.jsx  PlazmaMonacoToolbar.jsx  PlazmaPositionSliders.jsx  PlazmaSlider.jsx  Sidebar.jsx  StatusBar.jsx  TimeScrub.jsx  Toolbar.jsx  index.js  index.scss
gui/src/Glsl/: CompletionData.jsx  CompletionProvider.jsx  HoverProvider.jsx  ThemeBase16DefaultDark.jsx  TokensProvider.jsx
gui/src/Glsl/data/: GlslBuiltinFunctions.json  GlslBuiltinFunctions.yaml  GlslImageVariables.json  GlslImageVariables.yaml  GlslLanguageSnippets.json  GlslLanguageSnippets.yaml  GlslMatrixConstructors.json  GlslMatrixConstructors.yaml  GlslPredefinedConstants.json  GlslPredefinedConstants.yaml  GlslReservedVariables.json  GlslReservedVariables.yaml  convert.fish  (+6 more)
gui/src/old/: DmoQuadScenes.jsx
gui/src/static/: index.html  main.js
gui/src/superhero_custom/: _iosevka.scss  _mononoki.scss  _overrides.scss  _variables.scss
libs/intro_3d/: Cargo.toml
libs/intro_3d/src/: lib.rs  lib_std.rs
libs/intro_3d/tests/: operation_test.rs
libs/intro_runtime/: Cargo.toml
libs/intro_runtime/src/: camera.rs  context_gfx.rs  data_blob.rs  dmo_gfx.rs  dmo_sync.rs  error.rs  frame_buffer.rs  lib.rs  mesh.rs  model.rs  mouse.rs  polygon_context.rs  polygon_scene.rs  quad_scene_gfx.rs  shader.rs  shader_win.rs  shapes.rs  sync_vars.rs  texture.rs  timeline.rs  types.rs  uniform_buffer.rs
libs/intro_runtime_old/: Cargo.toml
libs/intro_runtime_old/src/: bytecode.rs  dmo.rs  dmo_gfx.rs  error.rs  lib.rs  shader.rs  sync.rs
libs/intro_runtime_old/src/jit/: mod.rs  ops.rs
libs/rocket_client/: Cargo.toml
libs/rocket_client/examples/: basic_example.rs
libs/rocket_client/src/: lib.rs  utils.rs
libs/rocket_sync/: Cargo.toml
libs/rocket_sync/src/: lib.rs
plazma/: .env-example  Cargo.toml  README.md
plazma/data/: circle.frag  default_sync_tracks.yml  shader.frag
plazma/data/builtin/: circle.frag  cross.frag  draw_result.frag
plazma/data/minimal/: demo.yml
plazma/data/minimal/data/: demo.rocket  light.frag  scene_object.vert  suzanne.frag
plazma/data/sample/: demo.yml
plazma/data/sample/data/: circle.frag
plazma/data/shaders/: cube_one.frag  dragon.frag  dragon.vert  draw.frag  room_box.frag  screen_quad.vert  skull.frag
plazma/data/templates/custom_polygon/: demo.yml
plazma/data/templates/custom_polygon/data/: cube_one.frag  cube_two.frag
plazma/data/templates/custom_quad/: demo.yml
plazma/data/templates/custom_quad/data/: circle.frag  screen_quad.vert
plazma/data/templates/shadertoy_default/: demo.yml
plazma/data/templates/shadertoy_default/data/: buf_image.frag
plazma/data/templates/shadertoy_raymarch/: demo.yml
plazma/data/templates/shadertoy_raymarch/data/: buf_image.frag
plazma/src/: app.rs  cli.yml  dmo_data.rs  error.rs  lib.rs  main.rs  nwjs_actor.rs  project_data.rs  server_actor.rs  server_init_actor.rs  utils.rs  webview_actor.rs
plazma/src/dmo_data/: context_data.rs  data_index.rs  mesh.rs  mod.rs  model.rs  polygon_context.rs  polygon_scene.rs  quad_scene.rs  sync_vars.rs  timeline.rs
plazma/src/preview_client/: client_actor.rs  dmo_gfx.rs  mod.rs  preview_state.rs
src/: dmo.rs  dmo_data.rs  lib.rs  main.rs  preview_client.rs  preview_state.rs  project_data.rs  server_actor.rs  server_types.rs  types.rs
src/preview_client/: client_types.rs  mod.rs  preview_state.rs
tests/: dmo_test.rs
tool/src/: main.rs
(+1 files in other folders)
