[package]
name = "plasma"
version = "0.1.0"
authors = ["etd <erethedaybreak@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.6"
clap = "2.32"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

web-view = "0.4"

actix = "0.7.7"
actix-web = "0.7.14"
hyper = "0.12"

