[package]
name = "plazma"
version = "0.1.0"
authors = ["Gambhiro <gambhiro.bhikkhu.85@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Create real-time graphics with shaders and polygon models.
"""
repository = "https://github.com/plazma-tool/plazma-tool"
readme = "README.md"

[dependencies]
libc = "0.2"
rand = "0.6"
futures = "0.1"

log = "0.4"
env_logger = "0.6"
kankyo = "0.2"
clap = { version = "2.32", features = ["yaml"] }
nfd = "0.0.4"
rust-embed = "4.4"
mime_guess = "2.0.0-alpha.6"

gl = "0.11"
glutin = "0.19"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_xml = "0.9"

web-view = "0.4"

actix = "0.7.7"
actix-web = "0.7.14"
reqwest = "0.9"

image = "0.21"
tobj = "0.1"

intro_3d = { path = "../libs/intro_3d" }
intro_runtime = { path = "../libs/intro_runtime" }
rocket_client = { path = "../libs/rocket_client" }
rocket_sync = { path = "../libs/rocket_sync" }

