[package]
name = "intro_runtime"
version = "0.1.0"
authors = ["Gambhiro <gambhiro.bhikkhu.85@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.11"
rocket_sync = { path = "../rocket_sync" }
intro_3d = { path = "../intro_3d" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

#[target.'cfg(target_os = "windows")'.dependencies]
#winapi = "0.3"
#kernel32-sys = "0.2"
