[package]
name = "intro_runtime"
version = "0.1.0"
authors = ["etd <erethedaybreak@gmail.com>"]

[dependencies]
gl = "0.6"
smallvec = "0.4.2"
rocket_sync = { path = "../rocket_sync" }
intro_3d = { path = "../intro_3d" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"